--- a/RaectJs/Course Goals/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/RaectJs/Course Goals/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,12 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.invalid input {
+  border: red;
+  background: rgb(209, 140, 140);
+}
+
+.form-control.invalid label {
+  color: red;
+}
